stage3/keycloak/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-insecure-noredirect
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/sso`)
      services:
        - kind: Service
          name: keycloak-service
          port: http
      # middlewares:
      #   - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-secure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/sso`)
      services:
        - kind: Service
          name: keycloak-service
          port: http
  tls: {}
